[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/SettingsManager.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Ingame/HUD/ScoreManager.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Interface.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/checkerboard.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Ingame/Powerups/PowerupSpawner.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Ingame/EnemySpawner.gd" type="Script" id=7]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Interface" parent="." instance=ExtResource( 4 )]

[node name="EnemySpawner" type="Node" parent="."]
script = ExtResource( 7 )

[node name="PowerupSpawner" type="Node" parent="."]
script = ExtResource( 6 )

[node name="ScoreManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="SettingsManager" type="Node" parent="."]
script = ExtResource( 1 )

[node name="ObjectContainer" type="Node" parent="."]

[node name="Background" type="Node2D" parent="."]
z_index = -2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="TextureRect" parent="Background"]
margin_left = -400.0
margin_top = -400.0
margin_right = 10480.0
margin_bottom = 7120.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}
